kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "whoami-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
