kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-dacbd-dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prod-lb-address
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: gce
    networking.gke.io/v1beta1.FrontendConfig: frontend-config
spec:
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
  rules:
    - host: whoami.dacbd.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: whoami
                port:
                  number: 80
